fixed spacing

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
   padding: 5px;
   margin-left: 35px;
   list-style-type: decimal;
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: lightsteelblue;
   width: 15%;
 }
@@ -32,5 +32,5 @@
   color: darksalmon;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: 120%;
-  text-align: center
+  text-align: center;
 }
